k8_resources/network_polices/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-frontend-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql   
  policyTypes:
    - Ingress   
  ingress:
    - from:        
        - podSelector:
            matchLabels:
              app: backend
      ports:       
        - protocol: TCP
          port: 3306
